--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@prisma/client": "^6.3.1",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@react-three/drei": "^9.121.5",
+    "@react-three/fiber": "^8.17.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.3",
     "lucide-react": "^0.475.0",
+    "mysql2": "^3.12.0",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
