--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/estree": "^1.0.6",
     "@types/next-auth": "^3.13.0",
     "@types/node": "^20",
     "@types/react": "^18.3.18",
