--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-slot": "^1.1.2",
-    "@react-three/drei": "^9.121.5",
+    "@react-three/drei": "^10.0.2",
     "@react-three/fiber": "^9.0.4",
+    "@tanstack/react-table": "^8.21.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.3",
@@ -28,8 +29,8 @@
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "three-mesh-bvh": "^0.8.0"
