--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@react-three/drei": "^10.0.2",
-    "@react-three/fiber": "^9.0.4",
+    "@react-three/drei": "^10.0.4",
+    "@react-three/fiber": "^9.1.0",
     "@tanstack/react-table": "^8.21.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.3",
+    "framer-motion-3d": "^12.4.10",
     "html-to-image": "^1.11.13",
     "lucide-react": "^0.475.0",
     "mysql2": "^3.12.0",
